--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Spectral:wght@700&display=swap");
-
 * {
   box-sizing: border-box;
 }
@@ -9,7 +7,7 @@ body {
   margin: 0px;
   color: #333;
   --type-first: Helvetica, Arial, sans-serif;
-  --type-second: "Spectral", Georgia;
+  --type-second: var(--type-second-spectral), Georgia;
   font-family: var(--type-first);
 }
 
